# Backend-Axum-Auth-Postgres-

./: Cargo.toml
migrations/: 20251121050124_users.down.sql  20251121050124_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  router.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs  mod.rs  send_mail.rs
src/mail/templates/: Passwordchanged-email.html  ResetPassword-email.html  Verification-email.html
src/utils/: password.rs  token.rs
