[package]
name = "axum_auth_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
axum = "0.8.7"
axum-server = { version = "0.7.1", features = ["tls-openssl"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing-subscriber = "0.3.20"
lettre = "0.11.19"
validator = { version = "0.20.0", features = ["derive"] }

