[package]
name = "axum_auth_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.20"
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
tera = "1.20.1"
lazy_static = "1.5.0"
rand = "0.9.2"
rand_distr = "0.5.1"
time = { version = "0.3.44", features = ["serde"] }

